--- a/src/pages/secondary-market/secondary-market.module.scss
+++ b/src/pages/secondary-market/secondary-market.module.scss
@@ -3,8 +3,9 @@
 @use 'sass:color';
 
 .secondaryMarketPage {
-  width: 100%;
-  padding: 100px 0;
+  max-width: 97%;
+  margin: 0 auto;
+  padding: 100px 20px;
   contain: layout paint;
 
   @media (min-width: 1135px) {
